--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Christopher Brown</title>
 </head>
 <body>
-    hello
+      <h1>Recommended Games to Play</h1>
+
+      <p></p>
 </body>
 </html>
