--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christopher Brown</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-      <h1>Recommended Games to Play</h1>
-
+      <h1>Hello World</h1>
+<hr>
       <p></p>
 </body>
 </html>
