--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
       <h1>Hello World</h1>
-<hr>
-      <p></p>
+
+      <nav class="navbar">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Conacts</a></li>
+            <li><a href="">Resume</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h3>This is the Home page</h3>
+        <p>Games that should be played.Such as </p>
+    </main>
 </body>
 </html>
