--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Conacts</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="">Projects</a></li>
         </ul>
     </nav>
 
     <main>
         <h3>This is the Home page</h3>
-        <p>Games that should be played.Such as </p>
+        <p>This page will mostly be about me.Plus a little extra. </p>
     </main>
 </body>
 </html>
