--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-      <h1>Hello World</h1>
+      <h1 id="WelcometomyWebsite">Welcome to my Website</h1>
 
       <nav class="navbar">
         <ul>
@@ -23,4 +23,6 @@
         <p>This page will mostly be about me.Plus a little extra. </p>
     </main>
 </body>
+<img src="christopher.png" height="300"/>
+<img src="christopher2.png"
 </html>
