Hello again again again

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     </nav>
 
     <main>
-        <h3 style="font-size: 45px;text-align: center;">This is the Projects page</h3>
-        <p>This page will mostly be about me.Plus a little extra. </p>
+        <h3 style="font-size:45px;text-align: center;">This is the About page</h3>
+        <p style="text-align: center;">This page will consist of the many milestones in my life. </p>
     </main>
 </body>
 
