--- a/contacts.html
+++ b/contacts.html
@@ -13,14 +13,15 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contacts.html">Conacts</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
             <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
 
     <main>
-        <h3 style="font-size: 45px;text-align: center;">This is the Projects page</h3>
+        <h3>This is the Contacts page</h3>
         <p>This page will mostly be about me.Plus a little extra. </p>
+        <p></p>
     </main>
 </body>
 
