--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
       <nav class="navbar">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Conacts</a></li>
-            <li><a href="">Projects</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
 
@@ -23,6 +23,6 @@
         <p>This page will mostly be about me.Plus a little extra. </p>
     </main>
 </body>
-<img src="christopher.png" height="300"/>
-<img src="christopher2.png"
+
+
 </html>
