--- a/contacts.html
+++ b/contacts.html
@@ -19,9 +19,9 @@
     </nav>
 
     <main>
-        <h3>This is the Contacts page</h3>
-        <p>This page will mostly be about me.Plus a little extra. </p>
-        <p></p>
+        <h3 style="font-size:44px;text-align: center;">This is the Contacts page</h3>
+        <li><a href="https://brooklynsteamcenter.org/">Head over to the steam Center Webpage</a> </li>
+    
     </main>
 </body>
 
