--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,19 @@
 
     <main>
         <h3 style="font-size: 45px;text-align: center;">This is the Projects page</h3>
-        <p>This page will mostly be about me.Plus a little extra. </p>
+        <p class="text-24px">This page will mostly consist of the many projects I have worked on towards the development of my website.</p>
+
     </main>
 </body>
+<header style="font-size: 30px;text-align: center;">Floor Plan Design</header>
+<div class="text-center">
+    <img src="floorplan.png" alt="logo" width="300" height="200">
 
+
+
+</div>
+<p style="font-size: 24px;">The goal of this project was to visualize a private doctors office with as much security as possible.To accomplish this,
+    I was provided a variety of different examples of proper security,such as cameras and biometric scanners.
+</p>
 
 </html>
