--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Brown</title>
+    <title>Home Page - Christopher Brown</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He a Hard Working Student">
+    <meta name="keywords" content="Christopher,Brown,Home,Page">
 </head>
 <body>
       <h1 id="WelcometomyWebsite">Welcome to my Website</h1>
