--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Brown</title>
+    <title> Projects - Christopher Brown</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He a Hard Working Student">
+    <meta name="keywords" content="Christopher,Brown,Projects">
 </head>
 <body>
       <h1 id="WelcometomyWebsite">Welcome to my Website</h1>
@@ -34,5 +36,7 @@
 <p style="font-size: 24px;">The goal of this project was to visualize a private doctors office with as much security as possible.To accomplish this,
     I was provided a variety of different examples of proper security,such as cameras and biometric scanners.
 </p>
+
+
 
 </html>
