--- a/about.html
+++ b/about.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Brown</title>
+    <title>About Me - Christopher Brown</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He a Hard Working Student">
+    <meta name="keywords" content="Christopher,Brown,About,Me">
 </head>
 <body>
       <h1 id="WelcometomyWebsite">Welcome to my Website</h1>
@@ -22,7 +24,8 @@
         <h3 style="font-size:45px;text-align: center;">This is the About page</h3>
         <p style="text-align: center;">This page will consist of the many milestones in my life. </p>
     </main>
-</body>
 
+</body>
+<p style="font-size: 20px;"></p>
 
 </html>
