--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Christopher Brown</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He a Hard Working Student">
+    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He's a Hard Working Student">
     <meta name="keywords" content="Christopher,Brown,About,Me">
 </head>
 <body>
@@ -26,6 +26,8 @@
     </main>
 
 </body>
-<p style="font-size: 20px;"></p>
+<p style="font-size: 20px;">My name is Christopher Brown,I am currently learning as a steam scholar at the Brooklyn Navy Yard Steam Center.
+    I am a humble young individual who likes to play video games and watch anime.I am always ready to help someone out given the chance.
+</p>
 
 </html>
