--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page - Christopher Brown</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He a Hard Working Student">
+    <meta name="description" content="Christopher Brown is a student styudying Full Stack Development.He is a Hard Working Student">
     <meta name="keywords" content="Christopher,Brown,Home,Page">
 </head>
 <body>
