--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
     <main>
         <h3 style="font-size: 45px;text-align: center;">This is the Projects page</h3>
-        <p class="text-24px">This page will mostly consist of the many projects I have worked on towards the development of my website.</p>
+        <p class="text-15px">This page will mostly consist of the many projects I have worked on towards the development of my website.</p>
 
     </main>
 </body>
@@ -33,8 +33,8 @@
 
 
 </div>
-<p style="font-size: 24px;">The goal of this project was to visualize a private doctors office with as much security as possible.To accomplish this,
-    I was provided a variety of different examples of proper security,such as cameras and biometric scanners.
+<p class="text-15px">The goal of this project was to visualize a private doctors office with as much security as possible.To accomplish this,
+    I was provided a variety of different examples of proper security,such as cameras and biometric scanners.See,it's important to 
 </p>
 
 
